[gd_scene load_steps=5 format=1]

[ext_resource path="res://scene/Menu.gd" type="Script" id=1]
[ext_resource path="res://image/bg.tex" type="Texture" id=2]
[ext_resource path="res://image/title.png" type="Texture" id=3]
[ext_resource path="res://misc/opendyslexic32.fnt" type="BitmapFont" id=4]

[node name="Menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 800.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Title" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 313.0
margin/top = 92.0
margin/right = 917.0
margin/bottom = 148.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="HBoxButton" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 267.0
margin/top = 211.0
margin/right = 959.0
margin/bottom = 316.0

[node name="Level1" type="Button" parent="HBoxButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 0.0
margin/right = 201.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LEVEL 1"
flat = false

[node name="Level2" type="Button" parent="HBoxButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 269.0
margin/top = 0.0
margin/right = 449.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LEVEL 2"
flat = false

[node name="Level3" type="Button" parent="HBoxButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 521.0
margin/top = 0.0
margin/right = 695.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LEVEL 3"
flat = false

[node name="LbFps" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 723.0
margin/right = 309.0
margin/bottom = 762.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FPS: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LbInfo" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 349.0
margin/top = 422.0
margin/right = 926.0
margin/bottom = 563.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0154419, 0.144647, 0.988281, 1 )
text = "CONTROL:\nDesktop: \n- Change item: CTRL or Spacebar\n- Create item: Mouse left"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Reward" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 956.0
margin/top = 395.0
margin/right = 1130.0
margin/bottom = 500.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "REWARD"
flat = false

[connection signal="pressed" from="HBoxButton/Level1" to="." method="_on_Level1_pressed"]

[connection signal="pressed" from="HBoxButton/Level2" to="." method="_on_Level2_pressed"]

[connection signal="pressed" from="HBoxButton/Level3" to="." method="_on_Level3_pressed"]

[connection signal="pressed" from="Reward" to="." method="_on_Reward_pressed"]


